<?xml version="1.0"?>
<package>
  <name>ethercat_controller</name>
  <version>0.0.0</version>
  <description>The ethercat_controller package</description>

  <maintainer email="dawid.seredynski@gmail.com">Dawid Seredynski</maintainer>
  <license>BSD</license>

  <author>Dawid Seredynski</author>

  <url>http://ros.org/wiki/ethercat_controller</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>soem</build_depend>

  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>soem</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rtt_ros>
      <plugin_depend>rtt_rosnode</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
    </rtt_ros>
  </export>
</package>
